<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroud"
    android:padding="12dp"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/icon_person"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:src="@drawable/bus_map"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="44dp"
        android:layout_marginRight="44dp"
        android:contentDescription="@string/icon_person" />

    <TextView
        android:id="@+id/login_txt"
        android:layout_below="@id/icon_person"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Register"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:textColor="@color/textColor"
        android:textSize="26sp"
        android:textStyle="bold"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        android:layout_below="@id/login_txt"
        android:layout_marginRight="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/ic_person"
            android:drawableTint="@color/black"
            android:padding="10dp"
            android:singleLine="true"
            android:hint="@string/email"
            android:id="@+id/edtEmailReg"
            android:drawablePadding="10dp"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/firstName"
        android:layout_below="@id/email"
        android:layout_marginRight="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/ic_person"
            android:drawableTint="@color/black"
            android:padding="10dp"
            android:singleLine="true"
            android:hint="first name"
            android:id="@+id/edFirst_nameReg"
            android:drawablePadding="10dp"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lastName"
        android:layout_below="@id/firstName"
        android:layout_marginRight="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/ic_person"
            android:drawableTint="@color/black"
            android:padding="10dp"
            android:singleLine="true"
            android:hint="last name"
            android:id="@+id/edtLast_nameReg"
            android:drawablePadding="10dp"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/mobile_number"
        android:layout_below="@id/lastName"
        android:layout_marginRight="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtMobile_numberReg"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/ic_mobile_number"
            android:drawablePadding="10dp"
            android:drawableTint="@color/black"
            android:hint="+6280000000"
            android:inputType="number"
            android:padding="10dp"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_below="@id/mobile_number"
        android:layout_marginRight="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordReg"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/password"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/ic_action_name"
            android:drawablePadding="10dp"
            android:drawableTint="@color/black"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnRegister"
        android:background="@color/purple_500"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:text="Register"
        android:layout_margin="10dp"
        android:padding="12dp"/>

</RelativeLayout>